<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout style="@style/ViewMatchParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttonLogin"
            android:background="@color/white"
            android:elevation="@dimen/height_4dp"
            android:orientation="vertical"
            android:padding="@dimen/padding_largest">

            <ImageView
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/height_50dp"
                android:src="@drawable/ic_logo" />

            <TextView
                style="@style/ViewMatchWidth"
                android:gravity="center"
                android:text="@string/register_sign_in"
                android:textColor="@color/grey_300"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/buttonTerms"
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/margin_largest"
                android:text="@string/register_terms"
                android:textColorLink="@color/primaryColor" />

            <LinearLayout
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/margin_largest"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxTerms"
                    style="@style/ViewWrapContent"
                    android:paddingEnd="@dimen/padding_large"
                    android:button="@drawable/bg_check_box_selector" />

                <TextView
                    style="@style/ViewWrapContent"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/register_check_box_terms" />

            </LinearLayout>

            <TextView
                android:id="@+id/buttonApple"
                style="@style/ButtonRegisterScreen"
                android:layout_marginTop="@dimen/height_50dp"
                android:text="@string/register_apple"
                app:drawableStartCompat="@drawable/ic_apple" />

            <TextView
                android:id="@+id/buttonYahoo"
                style="@style/ButtonRegisterScreen"
                android:layout_marginTop="@dimen/margin_larger"
                android:text="@string/register_yahoo"
                app:drawableStartCompat="@drawable/ic_yahoo" />

            <TextView
                android:id="@+id/buttonGoogle"
                style="@style/ButtonRegisterScreen"
                android:layout_marginTop="@dimen/margin_larger"
                android:text="@string/register_google"
                app:drawableStartCompat="@drawable/ic_google" />

            <TextView
                android:id="@+id/buttonEmail"
                style="@style/ButtonRegisterScreen"
                android:layout_marginTop="@dimen/margin_larger"
                android:text="@string/register_email"
                app:drawableStartCompat="@drawable/ic_email" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLogin"
            style="@style/ViewMatchWidth"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_largest">

            <TextView
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/register_account_exists"
                android:textColor="@color/blue_500" />

            <TextView
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/register_login"
                android:textColor="@color/blue_500"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</layout>
