<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout style="@style/ViewMatchParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttonRegister"
            android:background="@color/white"
            android:elevation="@dimen/height_4dp"
            android:orientation="vertical"
            android:padding="@dimen/padding_largest">

            <ImageView
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/height_50dp"
                android:src="@drawable/ic_logo" />

            <TextView
                style="@style/ViewMatchWidth"
                android:gravity="center"
                android:text="@string/forgot_pass_title"
                android:textColor="@color/grey_300"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/height_50dp"
                android:gravity="center"
                android:text="@string/forgot_pass_text_1"
                android:textColor="@color/grey_300"
                android:textSize="18sp" />

            <TextView
                style="@style/ViewMatchWidth"
                android:gravity="center"
                android:text="@string/forgot_pass_text_2"
                android:textColor="@color/grey_300"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/height_50dp"
                android:background="@drawable/bg_gray_border"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/padding_large"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/padding_large" />

            <Button
                android:id="@+id/buttonForgotPass"
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/height_50dp"
                android:background="@drawable/bg_button_next"
                android:foreground="?android:selectableItemBackground"
                android:padding="@dimen/padding_larger"
                android:text="@string/forgot_pass_button"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRegister"
            style="@style/ViewMatchWidth"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_largest">

            <TextView
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/login_register_1"
                android:textColor="@color/blue_500" />

            <TextView
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/login_register_2"
                android:textColor="@color/blue_500"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</layout>
