<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout style="@style/ViewMatchParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttonRegister"
            android:background="@color/white"
            android:elevation="@dimen/height_4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_largest"
                android:orientation="vertical">

                <ImageView
                    style="@style/ViewMatchWidth"
                    android:src="@drawable/ic_logo" />

                <TextView
                    style="@style/ViewMatchWidth"
                    android:gravity="center"
                    android:text="@string/login_title"
                    android:textColor="@color/grey_300"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/buttonApple"
                    style="@style/ButtonLoginScreen"
                    android:layout_marginTop="@dimen/height_40dp"
                    android:text="@string/login_apple"
                    app:drawableStartCompat="@drawable/ic_apple" />

                <TextView
                    android:id="@+id/buttonYahoo"
                    style="@style/ButtonLoginScreen"
                    android:layout_marginTop="@dimen/margin_larger"
                    android:text="@string/login_yahoo"
                    app:drawableStartCompat="@drawable/ic_yahoo" />

                <TextView
                    android:id="@+id/buttonGoogle"
                    style="@style/ButtonLoginScreen"
                    android:layout_marginTop="@dimen/margin_larger"
                    android:text="@string/login_google"
                    app:drawableStartCompat="@drawable/ic_google" />

            </LinearLayout>

            <RelativeLayout style="@style/ViewMatchWidth">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_8dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_toStartOf="@id/tvOther"
                    android:background="@color/blue_100" />

                <TextView
                    android:id="@+id/tvOther"
                    style="@style/ViewWrapContent"
                    android:layout_centerHorizontal="true"
                    android:text="@string/login_other" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_8dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_toEndOf="@id/tvOther"
                    android:background="@color/blue_100" />

            </RelativeLayout>

            <LinearLayout
                style="@style/ViewMatchWidth"
                android:layout_margin="@dimen/margin_largest"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/ViewMatchWidth"
                    android:background="@drawable/bg_gray_border"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/padding_large"
                    android:hint="@string/register_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@id/editTextPass"
                    android:padding="@dimen/padding_large" />

                <TextView
                    android:id="@+id/textViewEmailValid"
                    style="@style/ViewWrapContent"
                    android:gravity="center_vertical"
                    android:text="@string/register_email_validation"
                    android:textColor="@color/red_new"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ViewMatchWidth"
                    android:layout_marginTop="@dimen/margin_largest"
                    app:hintEnabled="false"
                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/editTextPass"
                        style="@style/ViewMatchWidth"
                        android:layout_marginTop="@dimen/margin_largest"
                        android:background="@drawable/bg_gray_border"
                        android:drawableStart="@drawable/ic_pass"
                        android:drawablePadding="@dimen/padding_large"
                        android:hint="@string/register_pass_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/padding_large" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textViewLoginFailed"
                    style="@style/ViewMatchWidth"
                    android:text="@string/login_failed"
                    android:textColor="@color/red_new"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/buttonForgotPass"
                    style="@style/ViewMatchWidth"
                    android:layout_marginTop="@dimen/margin_largest"
                    android:gravity="center"
                    android:text="@string/login_forgot_pass"
                    android:textColor="@color/blue_500" />

                <Button
                    android:id="@+id/buttonLogin"
                    style="@style/ViewMatchWidth"
                    android:layout_marginTop="@dimen/margin_largest"
                    android:background="@drawable/bg_button_next"
                    android:foreground="?android:selectableItemBackground"
                    android:padding="@dimen/padding_larger"
                    android:text="@string/login_button_login"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonRegister"
            style="@style/ViewMatchWidth"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_largest">

            <TextView
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/login_register_1"
                android:textColor="@color/blue_500" />

            <TextView
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/login_register_2"
                android:textColor="@color/blue_500"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</layout>
