<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout style="@style/ViewMatchParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttonLogin"
            android:background="@color/white"
            android:elevation="@dimen/height_4dp"
            android:orientation="vertical"
            android:padding="@dimen/padding_largest">

            <ImageView
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/height_50dp"
                android:src="@drawable/ic_logo" />

            <TextView
                style="@style/ViewMatchWidth"
                android:gravity="center"
                android:text="@string/register_sign_in"
                android:textColor="@color/grey_300"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/height_50dp"
                android:background="@drawable/bg_gray_border"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/padding_large"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@id/editTextPass"
                android:padding="@dimen/padding_large" />

            <TextView
                android:id="@+id/textViewEmailValid"
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/register_email_validation"
                android:textColor="@color/red_new"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/margin_largest"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextPass"
                    style="@style/ViewMatchWidth"
                    android:layout_marginTop="@dimen/margin_largest"
                    android:background="@drawable/bg_gray_border"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawablePadding="@dimen/padding_large"
                    android:hint="@string/register_pass_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/padding_large" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewPassValid"
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/register_pass_validation"
                android:textColor="@color/red_new" />

            <Button
                android:id="@+id/buttonRegister"
                style="@style/ViewMatchWidth"
                android:layout_marginTop="@dimen/height_50dp"
                android:background="@drawable/bg_button_next"
                android:foreground="?android:selectableItemBackground"
                android:padding="@dimen/padding_larger"
                android:text="@string/register_button"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLogin"
            style="@style/ViewMatchWidth"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_largest">

            <TextView
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/register_account_exists"
                android:textColor="@color/blue_500" />

            <TextView
                style="@style/ViewWrapContent"
                android:gravity="center_vertical"
                android:text="@string/register_login"
                android:textColor="@color/blue_500"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</layout>
